--- a/organization-service/src/main/resources/application.yml
+++ b/organization-service/src/main/resources/application.yml
@@ -15,4 +15,4 @@ logging:
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 
 springdoc:
-  packagesToScan: py.com.organization
+  packagesToScan: com.py.organization
