Added keycloak configuration

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -13,6 +13,19 @@ logging:
 spring:
   application:
     name: gateway-service
+  security:
+    oauth2:
+      client:
+        provider:
+          my-keycloak-provider:
+            issuer-uri: http://localhost:9090/auth/realms/spring-cloud-microservices
+          registration:
+            keycloak-spring-gateway-client:
+              provider: my-keycloak-provider
+              client-id: spring-cloud-microservices-client
+              client-secret: c64645b5-ac33-4bd2-a017-89bd1b5986c1
+              authorization-grant-type: authorization_code
+              redirect-uri: '{baseUrl}/login/oauth2/code/keycloak'
   cloud:
     gateway:
       discovery:
@@ -43,7 +56,7 @@ spring:
         - Path=/v3/api-docs/**
         filters:
         - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
-
+            
 springdoc:
   swagger-ui:
     urls:
@@ -53,3 +66,5 @@ springdoc:
         url: /v3/api-docs/department
       - name: organization
         url: /v3/api-docs/organization
+        
+        
