--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -39,6 +39,14 @@
 			<artifactId>springdoc-openapi-webflux-ui</artifactId>
 			<version>1.5.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-oauth2-client</artifactId>
+                 </dependency>
 	</dependencies>
 
 	<dependencyManagement>
